--- a/src/components/list/components/listItem/styles.module.scss
+++ b/src/components/list/components/listItem/styles.module.scss
@@ -83,7 +83,7 @@
     top: vars.$spacing-tertiary;
     right: vars.$spacing-tertiary;
     background-color: vars.$color-background-translucent;
-    padding-block: vars.$spacing-tertiary / 2;
+    padding-block: calc(vars.$spacing-tertiary / 2);
     padding-inline: vars.$spacing-secondary;
     border-radius: vars.$roundness;
   }
