--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -60,18 +60,8 @@ $color-surface2: rgb(40, 40, 40);
 $color-surface3: rgba(65, 65, 65);
 $color-surface4: rgba(80, 80, 70);
 $color-surface5: rgba(95, 95, 95);
-$color-header: var(--color-header);
-$color-navbar: var(--color-navbar);
-$color-surface-translucent: var(--color-surface-translucent);
-$color-surface2-translucent: var(--color-surface-translucent);
-$color-surface3-translucent: var(--color-surface-translucent);
-$color-surface4-translucent: var(--color-surface-translucent);
-$color-surface5-translucent: var(--color-surface-translucent);
 
-$color-text-special: var(--color-text-special);
 $color-text-primary: rgba(255, 255, 255, 0.87);
 $color-text-secondary: rgba(255, 255, 255, 0.7);
 $color-text-tertiary: rgba(255, 255, 255, 0.5);
-$color-outline: var(--color-outline);
-
-$shadow: var(--shadow);
+$color-outline: #343e4b;
