feat: move input to top of list and add add icon to input

--- a/src/components/inputText/styles.module.scss
+++ b/src/components/inputText/styles.module.scss
@@ -31,7 +31,7 @@
     aspect-ratio: 1;
 
     .actionIcon {
-      font-size: vars.$icon-size-medium;
+      font-size: vars.$icon-size-large;
       color: vars.$color-text-secondary;
     }
   }
